[package]
name = "rust-graphics-fun"
version = "0.1.0"
edition = "2021"
authors = [ "Ralph Gutmann <ralph.gutmann@gmx.de>" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rust-graphics-fun"

[dependencies]
piston = "0.53.0"
piston2d-graphics = "0.42.0"
pistoncore-glutin_window = "0.69.0"
piston2d-opengl_graphics = "0.81.0"
rand = "0.8.5"

