[package]
name = "rust-graphics-fun"
version = "0.1.0"
edition = "2021"
authors = [ "Ralph Gutmann <ralph.gutmann@gmx.de>" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rust-graphics-fun"

[dependencies]
piston = "0.55.0"
piston2d-graphics = "0.44.0"
pistoncore-glutin_window = "0.72.0"
piston2d-opengl_graphics = "0.84.0"
rand = "0.8.5"
glam = "0.25.0"
lazy_static = "1.4.0"